# AlphaChicken

./: .gitignore  BATCH_TESTING_README.md  PACE_DEPLOYMENT.md  PACE_QUICK_START.md  README.md  aggregate_results.sh  create_pace_package.sh  debug_log.txt  run_batch_games.sh  run_batch_pace.slurm  run_batch_pace_array.slurm  run_single_game.sh
3600-agents/Bobby/: agent.py  heuristics.py  voronoi.py  zobrist.py
3600-agents/Bobby_2/: agent.py  heuristics.py  hiddenMarkov.py  voronoi.py  zobrist.py
3600-agents/Bobby_3/: agent.py  bfs_utils.py  heuristics.py  voronoi.py
3600-agents/Bobby_4/: agent.py  heuristics.py  voronoi.py  zobrist.py
3600-agents/Bobby_5/: agent.py  heuristics.py
3600-agents/Bobby_5_2/: heuristics.py  voronoi.py  zobrist.py
3600-agents/Bobby_5_3/: agent.py  heuristics.py  voronoi.py
3600-agents/Bobby_5_4/: agent.py  bfs_utils.py  heuristics.py  weights.py
3600-agents/Bobby_6/: agent.py  game_trace.jsonl  heuristics.py  train.py  train_td.py  voronoi.py  weights.py
3600-agents/CPPHikaru_3/: .dockerignore  BUILD_AND_TEST.md  BUILD_LINUX_SO.md  CMakeLists.txt  Dockerfile  LINUX_BUILD_INSTRUCTIONS.md  Makefile  POTENTIAL_BUGS.md  README.md  agent.py  agent_wrapper.h  bfs.cpp  bitboard.h  build.sh  build_linux_so_x86.sh  build_simple.sh  cpphikaru3.h  evaluation.cpp  evaluation.h  game_rules.cpp  game_rules.h  hmm.cpp  hmm.h  search.cpp  search.cpp.backup  search.h  voronoi.cpp  voronoi.h
3600-agents/Capablanca/: agent.py
3600-agents/Lightning/: .gitignore  CMakeLists.txt  Dockerfile  LOG_ANALYSIS.md  Makefile  REVERT_TIME_FIX.md  ZIP_INSTRUCTIONS.md  agent.py  agent_wrapper.cpp.backup  build_for_linux.sh  build_linux_so.sh  create_final_zip.sh
3600-agents/Lightning/src/: agent_wrapper.cpp  bfs.h  bitboard.h  cpphikaru3.cpp  evaluation.cpp  hmm.cpp  search.cpp  voronoi.cpp  voronoi.h  zobrist.cpp  zobrist.h
3600-agents/Tal/: agent.py
(+206 files in other folders)
